# DeskFoundry

./: Cargo.toml  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml
actions/publish-portable-update/: action.yml
crates/desktop-config/: Cargo.toml  README.en.md  README.md
crates/desktop-config/src/: lib.rs
crates/desktop-egui/: Cargo.toml  README.en.md  README.md
crates/desktop-egui/src/: lib.rs
crates/desktop-fs/: Cargo.toml  README.en.md  README.md
crates/desktop-fs/src/: lib.rs
crates/desktop-i18n/: Cargo.toml  README.en.md  README.md
crates/desktop-i18n/src/: lib.rs
crates/desktop-logger/: Cargo.toml  README.en.md  README.md
crates/desktop-logger/src/: lib.rs
crates/desktop-update-publisher/: Cargo.toml  README.en.md  README.md  build.rs
crates/desktop-update-publisher/src/: main.rs
crates/desktop-updater/: Cargo.toml  README.en.md  README.md  build.rs
crates/desktop-updater/src/: lib.rs
crates/desktop-updater/tests/: helper_process.rs
crates/desktop-updater/tests/fixtures/: app.rs  helper.rs
docs/: desktop-app-reuse-guide.md  portable-update-guide.en.md  portable-update-guide.md
templates/desktop-app-template/: CHANGELOG.md  Cargo.toml  LICENSE  README.en.md  README.md  build.rs  config.example.json  desktop-update.toml
templates/desktop-app-template/.cargo/: config.toml
templates/desktop-app-template/.github/workflows/: release.yml
templates/desktop-app-template/assets/: README.md
templates/desktop-app-template/scripts/: package_windows_release.sh
templates/desktop-app-template/src/: main.rs
