[package]
name = "desktop-config"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable config and path helpers for Windows-first Rust desktop applications"
repository = "https://github.com/Shawlaw/DeskFoundry"

[dependencies]
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
