[package]
name = "desktop-i18n"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable i18n helpers for small Rust desktop applications"
repository = "https://github.com/Shawlaw/DeskFoundry"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"

