[package]
name = "desktop-update-publisher"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Create and sign desktop-updater manifests for portable release assets"
repository = "https://github.com/Shawlaw/DeskFoundry"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
desktop-updater = { path = "../desktop-updater" }
