[package]
name = "desktop-updater"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "Signed portable ZIP updates for Windows-first Rust desktop apps"
repository = "https://github.com/Shawlaw/DeskFoundry"
readme = "README.md"
keywords = ["windows", "desktop", "updater", "portable"]
categories = ["os::windows-apis"]

[[bin]]
name = "df-test-helper"
path = "tests/fixtures/helper.rs"
test = false
bench = false

[[bin]]
name = "df-test-app"
path = "tests/fixtures/app.rs"
test = false
bench = false

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
