[package]
name = "desktop-app-template"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Starter template for Windows-first Rust desktop applications"

[dependencies]
desktop-config = { path = "../../crates/desktop-config" }
desktop-egui = { path = "../../crates/desktop-egui" }
desktop-fs = { path = "../../crates/desktop-fs" }
desktop-i18n = { path = "../../crates/desktop-i18n" }
desktop-logger = { path = "../../crates/desktop-logger" }
eframe = "0.31"
log = { version = "0.4", features = ["std"] }
rfd = "0.15"

[features]
default = []
console = []

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
